include/codata_constants_2018.h

ADD_IMPORT extern const double INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double INVERSE_METER_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_INVERSE_METER_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double INVERSE_METER_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_INVERSE_METER_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double INVERSE_METER_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_INVERSE_METER_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double INVERSE_METER_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_INVERSE_METER_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double INVERSE_METER_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_INVERSE_METER_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double INVERSE_OF_CONDUCTANCE_QUANTUM;/**< ohm */
ADD_IMPORT extern const double U_INVERSE_OF_CONDUCTANCE_QUANTUM;/**< ohm */
ADD_IMPORT extern const double JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double U_JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double JOULE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_JOULE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double JOULE_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_JOULE_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double JOULE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_JOULE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double JOULE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_JOULE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double JOULE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_JOULE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double JOULE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_JOULE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double KELVIN_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_KELVIN_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double KELVIN_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_KELVIN_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double KELVIN_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_KELVIN_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double KELVIN_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_KELVIN_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double KELVIN_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_KELVIN_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double KELVIN_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_KELVIN_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double KILOGRAM_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double KILOGRAM_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_KILOGRAM_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */