src/codata_constants_latest.f90


real(dp), parameter, public :: INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP=1.33102505010e-15_dp !< u
real(dp), parameter, public :: U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP=0.00000000040e-15_dp !< u

real(cdp), protected, public, bind(C,name="INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_158=INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_158=U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP=1.239841984e-6_dp !< eV
real(dp), parameter, public :: U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP=0.0_dp !< eV

real(cdp), protected, public, bind(C,name="INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_159=INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_159=U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: INVERSE_METER_HARTREE_RELATIONSHIP=4.5563352529120e-8_dp !< E_h
real(dp), parameter, public :: U_INVERSE_METER_HARTREE_RELATIONSHIP=0.0000000000088e-8_dp !< E_h

real(cdp), protected, public, bind(C,name="INVERSE_METER_HARTREE_RELATIONSHIP"):: &
capi_160=INVERSE_METER_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_HARTREE_RELATIONSHIP") :: &
capi_U_160=U_INVERSE_METER_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: INVERSE_METER_HERTZ_RELATIONSHIP=299792458_dp !< Hz
real(dp), parameter, public :: U_INVERSE_METER_HERTZ_RELATIONSHIP=0.0_dp !< Hz

real(cdp), protected, public, bind(C,name="INVERSE_METER_HERTZ_RELATIONSHIP"):: &
capi_161=INVERSE_METER_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_HERTZ_RELATIONSHIP") :: &
capi_U_161=U_INVERSE_METER_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: INVERSE_METER_JOULE_RELATIONSHIP=1.986445857e-25_dp !< J
real(dp), parameter, public :: U_INVERSE_METER_JOULE_RELATIONSHIP=0.0_dp !< J

real(cdp), protected, public, bind(C,name="INVERSE_METER_JOULE_RELATIONSHIP"):: &
capi_162=INVERSE_METER_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_JOULE_RELATIONSHIP") :: &
capi_U_162=U_INVERSE_METER_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: INVERSE_METER_KELVIN_RELATIONSHIP=1.438776877e-2_dp !< K
real(dp), parameter, public :: U_INVERSE_METER_KELVIN_RELATIONSHIP=0.0_dp !< K

real(cdp), protected, public, bind(C,name="INVERSE_METER_KELVIN_RELATIONSHIP"):: &
capi_163=INVERSE_METER_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_KELVIN_RELATIONSHIP") :: &
capi_U_163=U_INVERSE_METER_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: INVERSE_METER_KILOGRAM_RELATIONSHIP=2.210219094e-42_dp !< kg
real(dp), parameter, public :: U_INVERSE_METER_KILOGRAM_RELATIONSHIP=0.0_dp !< kg

real(cdp), protected, public, bind(C,name="INVERSE_METER_KILOGRAM_RELATIONSHIP"):: &
capi_164=INVERSE_METER_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_INVERSE_METER_KILOGRAM_RELATIONSHIP") :: &
capi_U_164=U_INVERSE_METER_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: INVERSE_OF_CONDUCTANCE_QUANTUM=12906.40372_dp !< ohm
real(dp), parameter, public :: U_INVERSE_OF_CONDUCTANCE_QUANTUM=0.0_dp !< ohm

real(cdp), protected, public, bind(C,name="INVERSE_OF_CONDUCTANCE_QUANTUM"):: &
capi_165=INVERSE_OF_CONDUCTANCE_QUANTUM !< C API ohm
real(cdp), protected, public, bind(C,name="U_INVERSE_OF_CONDUCTANCE_QUANTUM") :: &
capi_U_165=U_INVERSE_OF_CONDUCTANCE_QUANTUM !< C API ohm

real(dp), parameter, public :: JOSEPHSON_CONSTANT=483597.8484e9_dp !< Hz V^-1
real(dp), parameter, public :: U_JOSEPHSON_CONSTANT=0.0_dp !< Hz V^-1

real(cdp), protected, public, bind(C,name="JOSEPHSON_CONSTANT"):: &
capi_166=JOSEPHSON_CONSTANT !< C API Hz V^-1
real(cdp), protected, public, bind(C,name="U_JOSEPHSON_CONSTANT") :: &
capi_U_166=U_JOSEPHSON_CONSTANT !< C API Hz V^-1

real(dp), parameter, public :: JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP=6.7005352565e9_dp !< u
real(dp), parameter, public :: U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP=0.0000000020e9_dp !< u

real(cdp), protected, public, bind(C,name="JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_167=JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_167=U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: JOULE_ELECTRON_VOLT_RELATIONSHIP=6.241509074e18_dp !< eV
real(dp), parameter, public :: U_JOULE_ELECTRON_VOLT_RELATIONSHIP=0.0_dp !< eV

real(cdp), protected, public, bind(C,name="JOULE_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_168=JOULE_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_JOULE_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_168=U_JOULE_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: JOULE_HARTREE_RELATIONSHIP=2.2937122783963e17_dp !< E_h
real(dp), parameter, public :: U_JOULE_HARTREE_RELATIONSHIP=0.0000000000045e17_dp !< E_h

real(cdp), protected, public, bind(C,name="JOULE_HARTREE_RELATIONSHIP"):: &
capi_169=JOULE_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_JOULE_HARTREE_RELATIONSHIP") :: &
capi_U_169=U_JOULE_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: JOULE_HERTZ_RELATIONSHIP=1.509190179e33_dp !< Hz
real(dp), parameter, public :: U_JOULE_HERTZ_RELATIONSHIP=0.0_dp !< Hz

real(cdp), protected, public, bind(C,name="JOULE_HERTZ_RELATIONSHIP"):: &
capi_170=JOULE_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_JOULE_HERTZ_RELATIONSHIP") :: &
capi_U_170=U_JOULE_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: JOULE_INVERSE_METER_RELATIONSHIP=5.034116567e24_dp !< m^-1
real(dp), parameter, public :: U_JOULE_INVERSE_METER_RELATIONSHIP=0.0_dp !< m^-1

real(cdp), protected, public, bind(C,name="JOULE_INVERSE_METER_RELATIONSHIP"):: &
capi_171=JOULE_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_JOULE_INVERSE_METER_RELATIONSHIP") :: &
capi_U_171=U_JOULE_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: JOULE_KELVIN_RELATIONSHIP=7.242970516e22_dp !< K
real(dp), parameter, public :: U_JOULE_KELVIN_RELATIONSHIP=0.0_dp !< K

real(cdp), protected, public, bind(C,name="JOULE_KELVIN_RELATIONSHIP"):: &
capi_172=JOULE_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_JOULE_KELVIN_RELATIONSHIP") :: &
capi_U_172=U_JOULE_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: JOULE_KILOGRAM_RELATIONSHIP=1.112650056e-17_dp !< kg
real(dp), parameter, public :: U_JOULE_KILOGRAM_RELATIONSHIP=0.0_dp !< kg

real(cdp), protected, public, bind(C,name="JOULE_KILOGRAM_RELATIONSHIP"):: &
capi_173=JOULE_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_JOULE_KILOGRAM_RELATIONSHIP") :: &
capi_U_173=U_JOULE_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP=9.2510873014e-14_dp !< u
real(dp), parameter, public :: U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP=0.0000000028e-14_dp !< u

real(cdp), protected, public, bind(C,name="KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_174=KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_174=U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: KELVIN_ELECTRON_VOLT_RELATIONSHIP=8.617333262e-5_dp !< eV
real(dp), parameter, public :: U_KELVIN_ELECTRON_VOLT_RELATIONSHIP=0.0_dp !< eV

real(cdp), protected, public, bind(C,name="KELVIN_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_175=KELVIN_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_KELVIN_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_175=U_KELVIN_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: KELVIN_HARTREE_RELATIONSHIP=3.1668115634556e-6_dp !< E_h
real(dp), parameter, public :: U_KELVIN_HARTREE_RELATIONSHIP=0.0000000000061e-6_dp !< E_h

real(cdp), protected, public, bind(C,name="KELVIN_HARTREE_RELATIONSHIP"):: &
capi_176=KELVIN_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_KELVIN_HARTREE_RELATIONSHIP") :: &
capi_U_176=U_KELVIN_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: KELVIN_HERTZ_RELATIONSHIP=2.083661912e10_dp !< Hz
real(dp), parameter, public :: U_KELVIN_HERTZ_RELATIONSHIP=0.0_dp !< Hz

real(cdp), protected, public, bind(C,name="KELVIN_HERTZ_RELATIONSHIP"):: &
capi_177=KELVIN_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_KELVIN_HERTZ_RELATIONSHIP") :: &
capi_U_177=U_KELVIN_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: KELVIN_INVERSE_METER_RELATIONSHIP=69.50348004_dp !< m^-1
real(dp), parameter, public :: U_KELVIN_INVERSE_METER_RELATIONSHIP=0.0_dp !< m^-1

real(cdp), protected, public, bind(C,name="KELVIN_INVERSE_METER_RELATIONSHIP"):: &
capi_178=KELVIN_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_KELVIN_INVERSE_METER_RELATIONSHIP") :: &
capi_U_178=U_KELVIN_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: KELVIN_JOULE_RELATIONSHIP=1.380649e-23_dp !< J
real(dp), parameter, public :: U_KELVIN_JOULE_RELATIONSHIP=0.0_dp !< J

real(cdp), protected, public, bind(C,name="KELVIN_JOULE_RELATIONSHIP"):: &
capi_179=KELVIN_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_KELVIN_JOULE_RELATIONSHIP") :: &
capi_U_179=U_KELVIN_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: KELVIN_KILOGRAM_RELATIONSHIP=1.536179187e-40_dp !< kg
real(dp), parameter, public :: U_KELVIN_KILOGRAM_RELATIONSHIP=0.0_dp !< kg

real(cdp), protected, public, bind(C,name="KELVIN_KILOGRAM_RELATIONSHIP"):: &
capi_180=KELVIN_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_KELVIN_KILOGRAM_RELATIONSHIP") :: &
capi_U_180=U_KELVIN_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP=6.0221407621e26_dp !< u
real(dp), parameter, public :: U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP=0.0000000018e26_dp !< u

real(cdp), protected, public, bind(C,name="KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_181=KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_181=U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: KILOGRAM_ELECTRON_VOLT_RELATIONSHIP=5.609588603e35_dp !< eV
real(dp), parameter, public :: U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP=0.0_dp !< eV

real(cdp), protected, public, bind(C,name="KILOGRAM_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_182=KILOGRAM_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_182=U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: KILOGRAM_HARTREE_RELATIONSHIP=2.0614857887409e34_dp !< E_h
real(dp), parameter, public :: U_KILOGRAM_HARTREE_RELATIONSHIP=0.0000000000040e34_dp !< E_h

real(cdp), protected, public, bind(C,name="KILOGRAM_HARTREE_RELATIONSHIP"):: &
capi_183=KILOGRAM_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_KILOGRAM_HARTREE_RELATIONSHIP") :: &
capi_U_183=U_KILOGRAM_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: KILOGRAM_HERTZ_RELATIONSHIP=1.356392489e50_dp !< Hz
real(dp), parameter, public :: U_KILOGRAM_HERTZ_RELATIONSHIP=0.0_dp !< Hz
